--- a/Locosocial/Base.lproj/Main.storyboard
+++ b/Locosocial/Base.lproj/Main.storyboard
@@ -70,15 +70,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="bbj-CK-UZk">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <rect key="frame" x="0.0" y="71" width="414" height="825"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <color key="separatorColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="501" id="bsn-AB-zKD" customClass="TableViewCell" customModule="Locosocial" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="44.5" width="414" height="501"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="442" id="bsn-AB-zKD" customClass="TableViewCell" customModule="Locosocial" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="442"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bsn-AB-zKD" id="G4f-Sv-Uqf">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="501"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="442"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yw9-7H-Cr5">
@@ -87,8 +87,8 @@
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RCN-GB-ycK">
                                                             <rect key="frame" x="103" y="161" width="118" height="46"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="width" constant="118" id="EHh-uO-nwL"/>
-                                                                <constraint firstAttribute="height" constant="46" id="UnJ-E9-wzd"/>
+                                                                <constraint firstAttribute="width" constant="118" id="I3q-cC-inN"/>
+                                                                <constraint firstAttribute="height" constant="46" id="NGh-io-C3K"/>
                                                             </constraints>
                                                             <fontDescription key="fontDescription" name="NotoSansOriya" family="Noto Sans Oriya" pointSize="0.0"/>
                                                             <nil key="textColor"/>
@@ -97,18 +97,18 @@
                                                     </subviews>
                                                     <color key="backgroundColor" systemColor="systemPinkColor"/>
                                                     <constraints>
-                                                        <constraint firstItem="RCN-GB-ycK" firstAttribute="top" secondItem="Yw9-7H-Cr5" secondAttribute="top" constant="161" id="0Wf-EX-bpV"/>
-                                                        <constraint firstAttribute="height" constant="479" id="QqI-D1-F1v"/>
-                                                        <constraint firstItem="RCN-GB-ycK" firstAttribute="centerX" secondItem="Yw9-7H-Cr5" secondAttribute="centerX" id="X4l-RP-ZxD"/>
-                                                        <constraint firstAttribute="width" constant="324" id="Zt9-80-8BH"/>
-                                                        <constraint firstItem="RCN-GB-ycK" firstAttribute="leading" secondItem="Yw9-7H-Cr5" secondAttribute="leading" constant="103" id="ksG-G3-IdS"/>
+                                                        <constraint firstItem="RCN-GB-ycK" firstAttribute="leading" secondItem="Yw9-7H-Cr5" secondAttribute="leading" constant="103" id="6Tv-mW-e0N"/>
+                                                        <constraint firstItem="RCN-GB-ycK" firstAttribute="centerX" secondItem="Yw9-7H-Cr5" secondAttribute="centerX" id="Ezn-kC-yVZ"/>
+                                                        <constraint firstItem="RCN-GB-ycK" firstAttribute="top" secondItem="Yw9-7H-Cr5" secondAttribute="top" constant="161" id="Xve-Eu-vmZ"/>
+                                                        <constraint firstAttribute="height" constant="479" id="kbF-Bf-ROl"/>
+                                                        <constraint firstAttribute="width" constant="324" id="m8J-BT-YLz"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="Yw9-7H-Cr5" firstAttribute="centerX" secondItem="G4f-Sv-Uqf" secondAttribute="centerX" id="1OB-rG-t3E"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="Yw9-7H-Cr5" secondAttribute="bottom" constant="-5" id="cgP-h1-9mu"/>
-                                                <constraint firstItem="Yw9-7H-Cr5" firstAttribute="top" secondItem="G4f-Sv-Uqf" secondAttribute="topMargin" constant="5" id="ztV-1b-6M3"/>
+                                                <constraint firstItem="Yw9-7H-Cr5" firstAttribute="centerX" secondItem="G4f-Sv-Uqf" secondAttribute="centerX" id="4Dh-1a-Pls"/>
+                                                <constraint firstItem="Yw9-7H-Cr5" firstAttribute="top" secondItem="G4f-Sv-Uqf" secondAttribute="topMargin" constant="5" id="O72-wb-fHg"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="Yw9-7H-Cr5" secondAttribute="bottom" constant="-64" id="u6V-VD-sp5"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -122,13 +122,15 @@
                         <viewLayoutGuide key="safeArea" id="D7q-Wt-Jpw"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="bbj-CK-UZk" firstAttribute="centerX" secondItem="6Z5-Un-n1F" secondAttribute="centerX" id="bod-fF-A0p"/>
-                            <constraint firstItem="bbj-CK-UZk" firstAttribute="leading" secondItem="D7q-Wt-Jpw" secondAttribute="leading" id="vPX-Re-WrA"/>
-                            <constraint firstItem="bbj-CK-UZk" firstAttribute="top" secondItem="6Z5-Un-n1F" secondAttribute="topMargin" constant="-44" id="xbY-wK-eue"/>
-                            <constraint firstItem="bbj-CK-UZk" firstAttribute="centerY" secondItem="6Z5-Un-n1F" secondAttribute="centerY" id="xxC-e0-tUo"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="bbj-CK-UZk" secondAttribute="bottom" constant="-83" id="DWP-Up-Lsx"/>
+                            <constraint firstItem="bbj-CK-UZk" firstAttribute="top" secondItem="D7q-Wt-Jpw" secondAttribute="top" constant="27" id="Gow-FP-nxI"/>
+                            <constraint firstItem="bbj-CK-UZk" firstAttribute="centerX" secondItem="6Z5-Un-n1F" secondAttribute="centerX" id="L2g-oZ-wJ5"/>
+                            <constraint firstItem="bbj-CK-UZk" firstAttribute="leading" secondItem="D7q-Wt-Jpw" secondAttribute="leading" id="hgB-Ei-SYf"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Feed" image="rectangle.grid.1x2" catalog="system" id="YKF-FY-VZi"/>
+                    <tabBarItem key="tabBarItem" title="Feed" image="rectangle.grid.1x2" catalog="system" id="YKF-FY-VZi">
+                        <color key="badgeColor" red="1" green="0.46274509800000002" blue="0.79215686269999996" alpha="1" colorSpace="calibratedRGB"/>
+                    </tabBarItem>
                     <nil key="simulatedTopBarMetrics"/>
                     <connections>
                         <outlet property="cardTableView" destination="bbj-CK-UZk" id="YWk-u3-zRq"/>
@@ -147,6 +149,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" red="1" green="0.46274509803921571" blue="0.792156862745098" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="selectedImageTintColor" red="1" green="0.46274509800000002" blue="0.79215686269999996" alpha="1" colorSpace="calibratedRGB"/>
                     </tabBar>
                     <connections>
                         <segue destination="fqk-mF-sv5" kind="relationship" relationship="viewControllers" id="g4w-Or-zJu"/>
